Stronger modulation of templates

--- a/templates/give/manage_account.html
+++ b/templates/give/manage_account.html
@@ -1,32 +1,3 @@
 {# Is loaded on '/manage_account' when a user is logged in. #}
 {% extends 'give/index.html' %}
-{% block content %}
-        <p class="love">Manage Account [<a href='{% url profile userprofile.username %}'>{{ userprofile.username }}</a>]</p>
-        <p class="abouth">Change user data:</p>
-        <form method="post" action="{% url manage_account %}" id="user_form">
-            <div class="about" style="padding-left: 2em; text-align: right; width: 450px;">
-            {{ user_form.as_p }}
-            <input class="button" type="submit" name="user" value="Change user data." />
-            </div>
-        </form>
-        <p class="abouth">Change Password:</p>
-        <form method="post" action="{% url manage_account %}" id="password_form">
-            <div class="about" style="padding-left: 2em; text-align: right; width: 450px;">
-            {{ password_form.as_p }}
-            <input class="button" type="submit" name="password" value="Change password." />
-            </div>
-        </form>
-        <p class="abouth">Profile:</p>
-        <form method="post" action="{% url manage_account %}" id="profile_form">
-            Websites:
-            <div class="about" style="padding-left: 2em; text-align: right; width: 450px;">
-            {{ profile_form.management_form }}
-            <ul style="list-style-type: none">
-            {% for form in profile_form %}
-            <li>{{ form.id }}{{ form.url }}{% for error in form.url.errors %}{{ error|escape }},{% endfor %}{{ form.non_field_errors }}</li>
-            {% endfor %}
-            </ul>
-            <input class="button" type="submit" name="profile" value="Update Profile" />
-            </div>
-        </form>
-{% endblock %}
+{% block content %}{% include 'give/manage_account_raw.html' %}{% endblock %}
