--- a/templates/give/register.html
+++ b/templates/give/register.html
@@ -1,17 +1,3 @@
 {# Is loaded on '/register'. #}
 {% extends 'give/index.html' %}
-{% block logged_in_menu %}{% endblock %}
-{% block content %}
-        <p class="love">Register to give.datalove.me</p>
-        <form method="post" action="{% url register %}">{% csrf_token %}
-            <div class="about" style="padding-left: 2em; text-align: right; width: 400px;">
-                {{ form.as_p }}
-                <input class="button" type="submit" value="Register account" /> <br />
-                <div style="font-size: 75%;text-align: left;">
-                    * This field is mandatory. Note that password recovery is not possible without an e-mail address
-                </div>
-            </div> 
-        </form>
-        <!--Place holder-->
-        <div style="height: 200px">&nbsp;</div>
-{% endblock %}
+{% block content %}{% include 'give/register_raw.html' %}{% endblock %}
