--- a/templates/give/reset_password.html
+++ b/templates/give/reset_password.html
@@ -1,16 +1,3 @@
 {# Is loaded as content on /reset_password (with index.html template). #}
 {% extends "give/index.html" %}
-{% block content %}
-        <p class="love">Reset password</p>
-        {% block reset_password_message %} <p class="about">Please enter your email address to reset your password.</p>{% endblock %}
-        {% block reset_password_form %}
-        <form method="post" action="{{ path }}">{% csrf_token %}
-            <div class="about" style="padding-left: 2em; text-align: right; width: 450px;">
-                {{ form.as_p }}
-                <input class="button" type="submit" value="Reset password" /> <br />
-            </div>
-        </form>
-        {% endblock %}
-        <!--Place holder-->
-        <div style="height: 400px">&nbsp;</div>
-{% endblock %}
+{% block content %}{% include 'give/reset_password_raw.html' %}{% endblock %}
