--- a/templates/give/reset_password_confirm.html
+++ b/templates/give/reset_password_confirm.html
@@ -1,6 +1,2 @@
-{% extends "give/reset_password.html" %}
-{% block reset_password_message %}
-        <p class="about">
-            Please enter and confirm your password.
-        </p>
-{% endblock %}
+{% extends "give/index.html" %}
+{% block content %}{% include 'give/reset_password_confirm_raw.html' %}{% endblock %}
