--- a/templates/give/reset_password_done.html
+++ b/templates/give/reset_password_done.html
@@ -1,6 +1,2 @@
-{% extends "give/reset_password.html" %}
-{% block reset_password_message %}
-        <p class="about">
-            We've e-mailed you instructions for re-setting your password to the e-mail address you submitted. You should be receiving it shortly
-        </p>
-{% endblock %}
+{% extends "give/index.html" %}
+{% block content %}{% include 'give/reset_password_done_raw.html' %}{% endblock %}
