--- a/templates/give/reset_password_complete.html
+++ b/templates/give/reset_password_complete.html
@@ -1,8 +1,2 @@
-{% extends "give/reset_password.html" %}
-{% block reset_password_message %}
-        <p class="about">
-            Password reset successfully.
-            <a href="{% url index %}">Back to main page.</a>
-        </p>
-{% endblock %}
-{% block reset_password_form %}{% endblock %}
+{% extends "give/index.html" %}
+{% block content %}{% include 'give/reset_password_complete_raw.html' %}{% endblock %}
