Seperate widget from its documentation

--- a/templates/give/index.html
+++ b/templates/give/index.html
@@ -23,7 +23,7 @@
             <li><a href="{% url manage_account %}">Manage account</a></li>
             <li><a href="{% url history userprofile.username %}">History</a></li>
 {% endif %}
-            <li><a href="{% url widget %}">Widget for website</a></li>
+            <li><a href="{% url widget_doc %}">Widget for website</a></li>
             <li><a href="http://datalove.me/give/about.html">About give.datalove.me</a>
             <li><a href="{% url users %}">Loverz</a></li>
             <li><a href="http://datalove.me/give/faq.html">FAQ</a></li>
