Make menu template generated

--- a/templates/give/index.html
+++ b/templates/give/index.html
@@ -18,16 +18,9 @@
 <div>
     <div id="sidebar">
         <ul>
-{% if logged_in %}
-            <li><a href="{% url logout %}?next={{ path }}">Logout</a></li>
-            <li><a href="{% url manage_account %}">Manage account</a></li>
-            <li><a href="{% url history userprofile.username %}">History</a></li>
-{% endif %}
-            <li><a href="{% url widget_doc %}">Widget for website</a></li>
-            <li><a href="http://datalove.me/give/about.html">About give.datalove.me</a>
-            <li><a href="{% url users %}">Loverz</a></li>
-            <li><a href="http://datalove.me/give/faq.html">FAQ</a></li>
-            <li><a href="{% url api__doc %}">API Documentation</a></li>
+            {% for entry in menu %}
+            <li><a href="{{ entry.url }}">{{ entry.name }}</a>
+            {% endfor %}
         </ul>
 {% if not logged_in and login_form_needed %}{% include "give/login_box.html" %}{% endif %}
     </div>
