--- a/templates/give/index.html
+++ b/templates/give/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <div class="menu">
-<a href="http://datalove.me/index.html">Principles</a> | <a href="http://datalove.me/images.html">Images</a> | <a href="http://datalove.me/about.html">About</a> | <a href="http://give.datalove.me/">give.datalove</a>
+<a href="http://datalove.me/index.html">Principles</a> | <a href="http://datalove.me/images.html">Images</a> | <a href="http://datalove.me/about.html">About</a> | <a href="{% url index %}">give.datalove</a>
 
 </div>
 <div>
@@ -28,7 +28,7 @@
 {% block content %}{% endblock %}
     </div>
     <div class="footer">
-    <span style="font-weight:bold">There are {{ total_loverz }} dataloverz registered!</span><br />
+    <span style="font-weight:bold">There are <span id="total_loverz">{{ total_loverz }}</span> dataloverz registered!</span><br />
     No Copyright, no license. Sorry, no kittehs.<br />
     Version 1.0 - beating heart <br />
     Part of the Telecomix Network.<br />
