--- a/templates/give/users_raw.html
+++ b/templates/give/users_raw.html
@@ -2,16 +2,16 @@
         <div id="content">
             <p>Currently we have <span style="color:#f00">{{ total_loverz }}</span> loverz!</p>
             {% if error %}
-                <div style="font-size: 75%;color: #ff0000;margin-bottom: 2px;text-align: left;">
+                <p style="font-size: 75%;color: #ff0000;margin-bottom: 2px;text-align: left;">
                     {{ error }}
-                </div>
+                </p>
             {% endif %}
             <ul>
                 {% for profile in profiles %}
                     <li>
                         <a href="{% url profile profile.username %}">{{ profile.username }}</a>
-                        (haz {{ profile.received_love }} datalovez)
-                        {% if logged_in and user != profile.user %}<a href="{% url give_user_datalove profile.username %}">Give some love</a>{% endif %}
+                        (haz <span id="{{ profile.username }}_received_love">{{ profile.received_love }}</span> datalovez)
+                        {% if logged_in and user != profile.user %}<a class="lovelink" href="{% url give_user_datalove profile.username %}">Give some love</a>{% endif %}
                     </li>
                 {% endfor %}
             </ul>
