--- a/templates/give/manage_account_raw.html
+++ b/templates/give/manage_account_raw.html
@@ -36,3 +36,4 @@
             <input class="button" type="submit" name="profile" value="Update Profile" />
             </div>
         </form>
+        <p class="abouth"><a href={% url unregister_confirm %}>Unregister</a></p>
